// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField should render the component correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex w-full flex-col"
      >
        <label
          class="mb-0.5 text-sm"
          for="options"
        >
          Select field
        </label>
        <div
          class="relative"
        >
          <select
            class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 appearance-none hover:cursor-pointer"
            id="options"
            name="options"
          >
            <option
              class="text-red-300"
              value=""
            >
              Select an option
            </option>
            <option
              class="text-red-300"
              value="1"
            >
              Option 1
            </option>
            <option
              class="text-red-300"
              value="2"
            >
              Option 2
            </option>
            <option
              class="text-red-300"
              value="3"
            >
              Option 3
            </option>
            <option
              class="text-red-300"
              value="4"
            >
              Option 4
            </option>
            <option
              class="text-red-300"
              value="5"
            >
              Option 5
            </option>
            <option
              class="text-red-300"
              value="6"
            >
              Option 6
            </option>
          </select>
          <svg
            class="size-4 text-primary/80 pointer-events-none absolute top-1/2 right-2 -translate-y-1/2 dark:text-white/80"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.25 15 12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex w-full flex-col"
    >
      <label
        class="mb-0.5 text-sm"
        for="options"
      >
        Select field
      </label>
      <div
        class="relative"
      >
        <select
          class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 appearance-none hover:cursor-pointer"
          id="options"
          name="options"
        >
          <option
            class="text-red-300"
            value=""
          >
            Select an option
          </option>
          <option
            class="text-red-300"
            value="1"
          >
            Option 1
          </option>
          <option
            class="text-red-300"
            value="2"
          >
            Option 2
          </option>
          <option
            class="text-red-300"
            value="3"
          >
            Option 3
          </option>
          <option
            class="text-red-300"
            value="4"
          >
            Option 4
          </option>
          <option
            class="text-red-300"
            value="5"
          >
            Option 5
          </option>
          <option
            class="text-red-300"
            value="6"
          >
            Option 6
          </option>
        </select>
        <svg
          class="size-4 text-primary/80 pointer-events-none absolute top-1/2 right-2 -translate-y-1/2 dark:text-white/80"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.25 15 12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectField should render the component correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex w-full flex-col"
      >
        <label
          class="mb-0.5 text-sm"
          for="options"
        >
          Select field
        </label>
        <div
          class="relative"
        >
          <select
            class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 appearance-none hover:cursor-pointer"
            id="options"
            name="options"
          >
            <option
              class="text-red-300"
              value=""
            >
              Select an option
            </option>
            <option
              class="text-red-300"
              value="1"
            >
              Option 1
            </option>
            <option
              class="text-red-300"
              value="2"
            >
              Option 2
            </option>
            <option
              class="text-red-300"
              value="3"
            >
              Option 3
            </option>
            <option
              class="text-red-300"
              value="4"
            >
              Option 4
            </option>
            <option
              class="text-red-300"
              value="5"
            >
              Option 5
            </option>
            <option
              class="text-red-300"
              value="6"
            >
              Option 6
            </option>
          </select>
          <svg
            class="size-4 text-primary/80 pointer-events-none absolute top-1/2 right-2 -translate-y-1/2 dark:text-white/80"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.25 15 12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class="flex w-full flex-col"
      >
        <label
          class="mb-0.5 text-sm"
          for="options"
        >
          Select field
          <span
            class="text-rose-600 dark:text-rose-400"
          >
             *
          </span>
        </label>
        <div
          class="relative"
        >
          <select
            class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 appearance-none hover:cursor-pointer"
            id="options"
            name="options"
          >
            <option
              class="text-red-300"
              value=""
            >
              Select an option
            </option>
            <option
              class="text-red-300"
              value="1"
            >
              Option 1
            </option>
            <option
              class="text-red-300"
              value="2"
            >
              Option 2
            </option>
            <option
              class="text-red-300"
              value="3"
            >
              Option 3
            </option>
            <option
              class="text-red-300"
              value="4"
            >
              Option 4
            </option>
            <option
              class="text-red-300"
              value="5"
            >
              Option 5
            </option>
            <option
              class="text-red-300"
              value="6"
            >
              Option 6
            </option>
          </select>
          <svg
            class="size-4 text-primary/80 pointer-events-none absolute top-1/2 right-2 -translate-y-1/2 dark:text-white/80"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.25 15 12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex w-full flex-col"
    >
      <label
        class="mb-0.5 text-sm"
        for="options"
      >
        Select field
        <span
          class="text-rose-600 dark:text-rose-400"
        >
           *
        </span>
      </label>
      <div
        class="relative"
      >
        <select
          class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 appearance-none hover:cursor-pointer"
          id="options"
          name="options"
        >
          <option
            class="text-red-300"
            value=""
          >
            Select an option
          </option>
          <option
            class="text-red-300"
            value="1"
          >
            Option 1
          </option>
          <option
            class="text-red-300"
            value="2"
          >
            Option 2
          </option>
          <option
            class="text-red-300"
            value="3"
          >
            Option 3
          </option>
          <option
            class="text-red-300"
            value="4"
          >
            Option 4
          </option>
          <option
            class="text-red-300"
            value="5"
          >
            Option 5
          </option>
          <option
            class="text-red-300"
            value="6"
          >
            Option 6
          </option>
        </select>
        <svg
          class="size-4 text-primary/80 pointer-events-none absolute top-1/2 right-2 -translate-y-1/2 dark:text-white/80"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.25 15 12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
